# bako

./: .gitignore  LICENSE  README.md  SPMP.md  cleanup.sh  requirements.txt  setup.cfg
bako/: __init__.py
bako/api/: __init__.py  book.py  lesson.py  user.py
bako/cli/: book.py  main.py
bako/docs/: DB_ACCESS.txt  dev_standards.md
bako/src/db/: base.py  client.py  utils.py
bako/src/db/models/: __init__.py  book.py  user.py
bako/tests/: test_dbutils.py  test_main.py  test_models.py
bako/utils/: config.py  logging.py
bako_api/: Procfile  manage.py
bako_api/bako_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
