[metadata]
name = bakorm
version = 0.0.1
author = ml.sftwrs
license = MIT
description = A python package for Bako
long_description = file: README.md
long_description_content_type = text/markdown
keyword = NLP, ASR, MT, ML, Bambara, Dataset, ml.sftwrs
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Text Processing :: Machine Learning :: Automatic Speech Recognition
    Natural Language :: Bambara
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy

[options.entry_points]
console_scripts =
    bakoctl = bako.cli.main:main

[options.package_data]
* = *
